<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ResultActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_result"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <ImageView
        android:id="@+id/iv_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/result_image"
        android:scaleType="centerCrop"
        android:src="@drawable/result_image"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_diagnosis_label" />

    <TextView
        android:id="@+id/tv_diagnosis_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diagnosis_result"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_result"/>

    <TextView
        android:id="@+id/tv_diagnosis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diagnosis_result_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_diagnosis_label"/>

    <TextView
        android:id="@+id/tv_recomendation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/treatment_recommendation"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_diagnosis"/>

    <TextView
        android:id="@+id/tv_recomendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/treatment_recommendation_result"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recomendation_label"/>

    <RelativeLayout
        android:id="@+id/btn_save"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recomendation">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_background"
            android:text="@string/save"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>